<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeiXin2</string>
    <string name="title_activity_app_start">AppStart</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="weixin">微信</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_tip">使用QQ号或者微信号登录</string>
    <string name="register_tip">【点击跳转到主界面】\n如果你没有QQ号，请注册"</string>
    <string name="title_activity_login">Login</string>
    <string name="back">返回</string>
    <string name="username_hint">QQ号/微信号/手机号</string>
    <string name="password_hint">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_whatsnew">Whatsnew</string>
    <string name="title_activity_whatsnew_door">WhatsnewDoor</string>
    <string name="title_activity_main_wei_xin">MainWeiXin</string>
    <string name="title_activity_weixin_top_dialog">WeixinTopDialog</string>
    <string name="title_activity_exit_from_setting">ExitFromSetting</string>

</resources>
