<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/welcome_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#eee"
              android:gravity="center">
    
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  >
        <ImageView android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:src="@drawable/copyright"/>
        
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#000"
                  android:textSize="36sp"
                  android:text="@string/weixin"
                  android:layout_marginLeft="10dp"/>
    </LinearLayout>
    
    <Button android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/login"
            android:background="@drawable/btn_style_green"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="#fff"/>
    
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/login_tip"
              android:textColor="#444"
              android:textSize="14sp"
              android:padding="6dp"/>
    
    <Button android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/register"
            android:background="@drawable/btn_style_white"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="#000"
            />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/register_tip"
              android:textColor="#444"
              android:textSize="14sp"
              android:padding="6dp"/>
</LinearLayout>